[gd_scene load_steps=15 format=2]

[ext_resource path="res://addons/EditorGUI/ArrowDown_hover.png" type="Texture" id=1]
[ext_resource path="res://addons/EditorGUI/Remove_hover.png" type="Texture" id=2]
[ext_resource path="res://addons/EditorGUI/ArrowUp.png" type="Texture" id=3]
[ext_resource path="res://addons/EditorGUI/ArrowDown.png" type="Texture" id=4]
[ext_resource path="res://addons/EditorGUI/ArrowUp_hover.png" type="Texture" id=5]
[ext_resource path="res://addons/EditorGUI/Remove.png" type="Texture" id=6]
[ext_resource path="res://addons/VNScriptEditor/noteBookBlock.gd" type="Script" id=7]
[ext_resource path="res://fonts/Ubuntu-Regular.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://addons/VNScriptEditor/ubuntuRegular.tres" type="DynamicFont" id=9]
[ext_resource path="res://addons/VNScriptEditor/noteBookTextEdit.gd" type="Script" id=10]
[ext_resource path="res://addons/EditorGUI/GuiVisibilityVisible.png" type="Texture" id=11]
[ext_resource path="res://addons/VNScriptEditor/ubuntuRedOutlined.tres" type="Theme" id=12]

[sub_resource type="DynamicFont" id=1]
size = 26
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.113725, 0.113725, 0.113725, 1 )

[node name="dialogBlock" type="VBoxContainer"]
margin_right = 1000.0
margin_bottom = 665.0
rect_min_size = Vector2( 1000, 665 )
theme = ExtResource( 12 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="space0" type="Control" parent="."]
margin_right = 1000.0

[node name="header" type="HBoxContainer" parent="."]
margin_top = 4.0
margin_right = 1000.0
margin_bottom = 54.0
rect_min_size = Vector2( 1000, 50 )
custom_constants/separation = 20

[node name="space1" type="Control" parent="header"]
margin_bottom = 50.0

[node name="whatBlock" type="Label" parent="header"]
margin_left = 20.0
margin_right = 305.0
margin_bottom = 36.0
size_flags_horizontal = 5
size_flags_vertical = 2
text = "Dialog Branch Name:"
align = 1
valign = 1

[node name="blockName" type="LineEdit" parent="header"]
margin_left = 325.0
margin_top = 5.0
margin_right = 465.0
margin_bottom = 45.0
rect_min_size = Vector2( 140, 40 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
max_length = 30
expand_to_text_length = true
caret_blink = true
caret_blink_speed = 0.5

[node name="list" type="HBoxContainer" parent="header"]
margin_left = 830.0
margin_right = 980.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 10
custom_constants/separation = 18

[node name="visible" type="TextureButton" parent="header/list"]
margin_top = 13.0
margin_right = 24.0
margin_bottom = 37.0
rect_min_size = Vector2( 24, 24 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 11 )
expand = true

[node name="up" type="TextureButton" parent="header/list"]
margin_left = 42.0
margin_top = 13.0
margin_right = 66.0
margin_bottom = 37.0
rect_min_size = Vector2( 24, 24 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 5 )
expand = true

[node name="down" type="TextureButton" parent="header/list"]
margin_left = 84.0
margin_top = 13.0
margin_right = 108.0
margin_bottom = 37.0
rect_min_size = Vector2( 24, 24 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 1 )
expand = true

[node name="delete" type="TextureButton" parent="header/list"]
margin_left = 126.0
margin_top = 13.0
margin_right = 150.0
margin_bottom = 37.0
rect_min_size = Vector2( 24, 24 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 2 )
texture_disabled = ExtResource( 2 )
expand = true

[node name="space2" type="Control" parent="header"]
margin_left = 1000.0
margin_right = 1000.0
margin_bottom = 50.0

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_top = 58.0
margin_right = 1000.0
margin_bottom = 657.0
rect_min_size = Vector2( 1000, 599 )
custom_constants/margin_right = 10
custom_constants/margin_top = 0
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="TextEdit" type="TextEdit" parent="MarginContainer"]
margin_left = 10.0
margin_right = 990.0
margin_bottom = 589.0
custom_colors/number_color = Color( 0.741176, 0.584314, 0.0941176, 1 )
custom_fonts/font = ExtResource( 9 )
custom_styles/focus = SubResource( 2 )
highlight_current_line = true
syntax_highlighting = true
show_line_numbers = true
highlight_all_occurrences = true
wrap_enabled = true
script = ExtResource( 10 )

[connection signal="pressed" from="header/list/visible" to="." method="_on_visible_pressed"]
[connection signal="pressed" from="header/list/up" to="." method="_on_up_pressed"]
[connection signal="pressed" from="header/list/down" to="." method="_on_down_pressed"]
[connection signal="pressed" from="header/list/delete" to="." method="_on_delete_pressed"]
